--- a/waifu-time/package.json
+++ b/waifu-time/package.json
@@ -9,12 +9,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "concurrently": "^5.1.0",
     "electron": "^8.2.0",
     "mpv.js": "^0.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "wait-on": "^4.0.1",
     "webtorrent": "^0.108.1"
   },
   "scripts": {
@@ -22,7 +24,8 @@
     "build": "rescripts build",
     "test": "rescripts test",
     "eject": "react-scripts eject",
-    "el": "electron ./public"
+    "el": "electron ./public",
+    "client-dev": "concurrently \"SET BROWSER=none && npm start\" \"wait-on http://localhost:3000 && electron ./public\" "
   },
   "eslintConfig": {
     "extends": "react-app"
