--- a/waifu-time/package.json
+++ b/waifu-time/package.json
@@ -14,9 +14,11 @@
     "electron": "^8.2.0",
     "mpv.js": "^0.3.0",
     "react": "^16.13.1",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "recharts": "^1.8.5",
     "wait-on": "^4.0.1",
     "webtorrent": "^0.108.1"
   },
