--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,30 @@ env
 geckodriver.log
 shows.txt
 env.cfg
+
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+media
+dist
+*.mkv
